# Android_Trojan

./: .gitattributes  .gitignore  README.md  build.gradle  build_android.sh
c2_server/: Dockerfile  Makefile  README.md  docker-compose.yml  go.mod  go.sum
c2_server/api/: command_handler.go  handlers.go  ws_handler.go
c2_server/cmd/server/: main.go
c2_server/config/: config.go
c2_server/internal/api/: handler.go
c2_server/internal/middleware/: auth.go
c2_server/internal/models/: command.go
c2_server/internal/services/: client.go  client_manager.go  client_manager_interface.go  client_manager_test.go
c2_server/internal/utils/: crypto.go  logger.go
c2_server/internal/websocket/: client.go  manager.go
c2_server/test/: api_test.sh  client_test.go
c2_server/web/: index.html
core_payload/: Cargo.toml  build.rs
core_payload/.cargo/: config.toml
core_payload/src/: lib.rs  main.rs  plugin.rs
core_payload/src/communication/: client.rs  protocol.rs
core_payload/src/plugin/: loader.rs  manager.rs
core_payload/src/utils/: crypto.rs  stealth.rs
docs/api/: api_reference.md
docs/architecture/: overview.md
docs/deployment/: deployment_guide.md
docs/development/: development_guide.md
dropper_app/: gradlew  gradlew.bat  settings.gradle
interfaces/c2_protocol/: protocol.proto
interfaces/dropper_core/: bridge.h
interfaces/plugin_protocol/: plugin_interface.h
plugins/: CMakeLists.txt
plugins/bindings/jni/: plugin_jni.cpp
plugins/bindings/rust/: plugin_ffi.rs
plugins/include/plugin_api/: plugin.h
plugins/src/audio_recorder/: audio_recorder.cpp
plugins/src/camera_access/: CMakeLists.txt  camera_access.cpp
plugins/src/common/: utils.h
plugins/src/location_tracker/: location_tracker.cpp
plugins/src/takephoto/: CMakeLists.txt  takephoto.cpp
src/main/: AndroidManifest.xml
src/main/cpp/: CMakeLists.txt  core_payload_jni.cpp  jni_wrapper.cpp
src/main/java/com/example/dropper/: MainActivity.kt
src/main/java/com/example/dropper/services/: HermesAccessibilityService.kt
src/main/java/com/example/hermesdropper/: MainActivity.kt
src/main/java/com/example/hermesdropper/services/: HermesAccessibilityService.kt
src/main/res/layout/: activity_main.xml
src/main/res/values/: strings.xml  themes.xml
testsprite_tests/tmp/: code_summary.json  config.json
