[package]
name = "core_payload"
version = "0.1.0"
edition = "2021"

[features]
default = ["ssl"]
ssl = ["tokio-tungstenite/rustls-tls-native-roots"]

[lib]
name = "core_payload"
crate-type = ["cdylib"]

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.17", features = ["connect", "rustls-tls-native-roots"] }
futures-util = "0.3.28"
url = "2.2"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
libloading = "0.7" # For dynamic loading of .so libraries
libc = "0.2" # For C code interaction